# Athen

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
assets/: pipecat_runner.py
config/: config.toml  domains.toml  models.toml
crates/athen-admin/: Cargo.toml
crates/athen-admin/src/: api.rs  auth.rs  db.rs  disk.rs  docker.rs  instances.rs  main.rs  notify.rs  proxy.rs  ratelimit.rs  seed.rs  ui.rs
crates/athen-admin/ui/: chat.html  index.html  panel.css  panel.js
crates/athen-agent/: Cargo.toml
crates/athen-agent/src/: auditor.rs  estimator.rs  executor.rs  lib.rs  reminders.rs  resource.rs  runtimes.rs  shell_classifier.rs  timeout.rs  tool_error_hints.rs  tool_grouping.rs  tool_truncation.rs  toolbox.rs  tools.rs  tools_doc.rs
crates/athen-agent/tests/: integration_agent.rs
crates/athen-app/: Cargo.toml  tauri.conf.json
crates/athen-app/binaries/: .gitignore
crates/athen-app/capabilities/: default.json
crates/athen-app/icons/: icon.icns
crates/athen-app/src/: agent_registry.rs  app_tools.rs  approval.rs  athen_docs.rs  attachment_purger.rs  bundle_settings.rs  bundled_embeddings.rs  calendar_sources.rs  code_mode.rs  commands.rs  compaction.rs  contacts.rs  deep_research.rs  delegation.rs  email_autodetect.rs  email_errors.rs  email_gate.rs  email_test.rs  embedding_hardware.rs  endpoints_render.rs  env_creds.rs  file_gate.rs  github_identity.rs  headless.rs  http_api.rs  http_presets.rs  http_rate_limiter.rs  identity_render.rs  lib.rs  main.rs  mission_render.rs  notifier.rs  owner_migration.rs  place_call.rs  proactive_hints.rs  process.rs  sense_router.rs  settings.rs  settings_calendar.rs  setup_tools.rs  (+13 more)
crates/athen-caldav/: Cargo.toml
crates/athen-caldav/examples/: smoke.rs
crates/athen-caldav/src/: client.rs  discovery.rs  ical_codec.rs  lib.rs  multistatus.rs
crates/athen-checkpoint/: Cargo.toml
crates/athen-checkpoint/src/: filter.rs  lib.rs  refs.rs  tree_builder.rs
crates/athen-cli/: Cargo.toml
crates/athen-cli/src/: main.rs
crates/athen-coordinador/: Cargo.toml
crates/athen-coordinador/src/: dispatcher.rs  lib.rs  queue.rs  risk.rs  router.rs
crates/athen-coordinador/tests/: integration_pipeline.rs
crates/athen-core/: Cargo.toml
crates/athen-core/src/: agent_profile.rs  approval.rs  attachment_policy.rs  calendar_source_config.rs  config.rs  config_loader.rs  contact.rs  email_provider.rs  error.rs  event.rs  http_endpoint.rs  identity.rs  ipc.rs  lib.rs  llm.rs  notification.rs  paths.rs  profile_routing.rs  redaction.rs  risk.rs  sandbox.rs  skill.rs  subagent.rs  task.rs  tool.rs  wakeup.rs
crates/athen-core/src/traits/: agent.rs  approval.rs  calendar_source.rs  calendar_source_config.rs  checkpoint.rs  compaction.rs  coordinator.rs  email_sender.rs  embedding.rs  http_endpoint.rs  identity.rs  llm.rs  mcp.rs  memory.rs  mod.rs  notification.rs  persistence.rs  profile.rs  reminder.rs  sandbox.rs  sense.rs  shell.rs  skill.rs  telegram_sender.rs  tool.rs  user_notify.rs  vault.rs  wakeup.rs
crates/athen-core/tests/: emb_roundtrip.rs
crates/athen-ipc/: Cargo.toml
crates/athen-ipc/src/: codec.rs  lib.rs  server.rs  transport.rs
crates/athen-ipc/tests/: integration_ipc.rs
crates/athen-llm/: Cargo.toml
crates/athen-llm/src/: budget.rs  lib.rs  router.rs
crates/athen-llm/src/embeddings/: bundled.rs  keyword.rs  mod.rs  ollama.rs  openai.rs  router.rs
crates/athen-llm/src/providers/: anthropic.rs  deepseek.rs  google.rs  llamacpp.rs  mod.rs  ollama.rs  openai.rs
crates/athen-llm/src/quirks/: extractors.rs  mod.rs  repair.rs  seed.rs
crates/athen-mcp/: Cargo.toml
crates/athen-mcp/src/: catalog.rs  lib.rs  registry.rs
crates/athen-memory/: Cargo.toml
crates/athen-memory/src/: extractor.rs  graph.rs  lib.rs  sqlite.rs  vector.rs
crates/athen-memory/tests/: integration_memory.rs
crates/athen-persistence/: Cargo.toml
crates/athen-persistence/src/: agent_runs.rs  arcs.rs  attachments.rs  calendar.rs  calendar_sources.rs  chat.rs  checkpoint.rs  contacts.rs  grants.rs  hint_dismissals.rs  http_endpoints.rs  identity.rs  lib.rs  mcp.rs  notifications.rs  profiles.rs  projects.rs  skills.rs  store.rs  telegram_chat_log.rs  wakeups.rs
crates/athen-persistence/tests/: integration_persistence.rs
crates/athen-risk/: Cargo.toml
crates/athen-risk/src/: content_risk.rs  lib.rs  llm_fallback.rs  path_eval.rs  rules.rs  scorer.rs
crates/athen-risk/tests/: integration_risk.rs
crates/athen-sandbox/: Cargo.toml
crates/athen-sandbox/src/: bwrap.rs  container.rs  detect.rs  landlock.rs  lib.rs  macos.rs  windows.rs
crates/athen-scheduler/: Cargo.toml
crates/athen-scheduler/src/: compute.rs  lib.rs  scheduler.rs
crates/athen-sentidos/: Cargo.toml
crates/athen-sentidos/src/: calendar.rs  email.rs  email_send.rs  lib.rs  messaging.rs  pdf_extract.rs  telegram.rs  telegram_send.rs  user_input.rs
crates/athen-vault/: Cargo.toml
crates/athen-vault/src/: encrypted_file.rs  keyring_backend.rs  lib.rs
crates/athen-voice/: Cargo.toml
crates/athen-voice/src/: lib.rs  pipecat_runtime.rs
crates/athen-web/: Cargo.toml
crates/athen-web/examples/: smoke.rs
crates/athen-web/src/: lib.rs
crates/athen-web/src/reader/: cloudflare.rs  hybrid.rs  jina.rs  local.rs  mod.rs  wayback.rs
crates/athen-web/src/search/: brave.rs  duckduckgo.rs  mod.rs  multi.rs  tavily.rs
crates/mcps/mcp-filesystem/: Cargo.toml
crates/mcps/mcp-filesystem/src/: lib.rs  main.rs
docs/: ADMIN_PANEL.md  ARCHITECTURE.md  ARC_COMPACTION.md  BENCHMARKS.md  BUNDLES.md  CHECKPOINTING.md  CLOUD_APIS.md  CODE_MODE.md  CONFIGURATION.md  DEEP_RESEARCH.md  EMAIL_SETUP.md  HEADLESS.md  IDENTITY.md  IMAP_IDLE.md  IMPLEMENTATION.md  IMPROVEMENT_ROADMAP.md  INTEGRATIONS_EXPANSION.md  INTEGRATIONS_PUSH.md  MEMORY.md  MULTI_INTENT_ROUTING.md  PACKAGING.md  PER_MODEL_QUIRKS.md  PROJECTS.md  PROMPT_CACHING.md  PROVIDER_PINNING.md  REASONING_EFFORT.md  REMOTE_ACCESS.md  ROADMAP.md  SELF_SUPPORT_SKILLS.md  SKILLS.md  THREAT_MODEL.md  (+4 more)
(+94 files in other folders)
