[package]
name = "athen-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
athen-ipc = { workspace = true }
athen-shell = { workspace = true }
athen-sandbox = { workspace = true }
athen-risk = { workspace = true }
athen-web = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
tokio-stream = { workspace = true }
blake3 = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
which = "6"
