[package]
name = "athen-app"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
athen-ipc = { workspace = true }
athen-coordinador = { workspace = true }
athen-llm = { workspace = true }
athen-risk = { workspace = true }
athen-contacts = { workspace = true }
athen-agent = { workspace = true }
athen-sentidos = { workspace = true }
athen-persistence = { workspace = true }
athen-memory = { workspace = true }
athen-mcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
toml = { workspace = true }
reqwest = { workspace = true }
imap = { workspace = true }
rustls-connector = { workspace = true }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.18"

[dev-dependencies]
tempfile = "3"
