[package]
name = "athen-app"
version = "0.1.5"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
athen-ipc = { workspace = true }
athen-coordinador = { workspace = true }
athen-llm = { workspace = true }
athen-risk = { workspace = true }
athen-contacts = { workspace = true }
athen-agent = { workspace = true }
athen-sentidos = { workspace = true }
athen-persistence = { workspace = true }
athen-memory = { workspace = true }
athen-mcp = { workspace = true }
athen-web = { workspace = true }
athen-shell = { workspace = true }
athen-scheduler = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
toml = { workspace = true }
reqwest = { workspace = true }
imap = { workspace = true }
rustls-connector = { workspace = true }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { workspace = true }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
base64 = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.20"

[dev-dependencies]
tempfile = "3"
