[package]
name = "athen-app"
version = "0.5.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
athen-ipc = { workspace = true }
athen-coordinador = { workspace = true }
athen-llm = { workspace = true }
athen-risk = { workspace = true }
athen-contacts = { workspace = true }
athen-agent = { workspace = true }
athen-sentidos = { workspace = true }
athen-persistence = { workspace = true }
athen-memory = { workspace = true }
athen-mcp = { workspace = true }
athen-web = { workspace = true }
athen-shell = { workspace = true }
athen-scheduler = { workspace = true }
athen-vault = { workspace = true }
athen-checkpoint = { workspace = true }
athen-caldav = { workspace = true }
athen-voice = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
toml = { workspace = true }
reqwest = { workspace = true }
imap = { workspace = true }
rustls-connector = { workspace = true }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { workspace = true }
arc-swap = { workspace = true }
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }
base64 = { workspace = true }
url = { workspace = true }
quick-xml = { workspace = true }
lettre = { workspace = true }
tempfile = "3"
# HTTP API for remote clients (React / React Native) — see http_api.rs.
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { workspace = true, features = ["sync"] }
# Web UI (web/dist, built with `npm run build` in web/ and committed)
# embedded into the binary and served by http_api.rs.
rust-embed = "8"

[features]
# Phase 2c flipped this default-ON. Released binaries now include
# the bundled fastembed-rs embedder; users activate a specific tier
# via Settings (`EmbeddingMode::Bundled { tier }`). The old
# `ATHEN_BUNDLED_EMBEDDINGS=1` env var no longer does anything.
default = ["bundled-embeddings"]
bundled-embeddings = ["athen-llm/bundled-embeddings"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.20"
is-wsl = "0.4"

# macOS cloudflared ships as a .tgz; tunnel.rs extracts it on that target only.
[target.'cfg(target_os = "macos")'.dependencies]
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
