[package]
name = "athen-caldav"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
quick-xml = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
