[package]
name = "athen-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
