[package]
name = "athen-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rmcp = { workspace = true, features = [
    "client",
    "transport-async-rw",
    "transport-child-process",
] }

[dev-dependencies]
tempfile = "3"
