[package]
name = "athen-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
athen-core = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
