[package]
name = "athen-risk"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
athen-contacts = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
uuid = { workspace = true }
chrono = { workspace = true }
