[package]
name = "athen-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
uuid = { workspace = true }
widestring = "1"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_Security_AppLocker",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_Storage_FileSystem",
] }
