[package]
name = "athen-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
