[package]
name = "athen-sentidos"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
athen-ipc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
imap = { workspace = true }
rustls-connector = { workspace = true }
mailparse = { workspace = true }
