[package]
name = "athen-sentidos"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
athen-contacts = { workspace = true }
athen-ipc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
imap = { workspace = true }
rustls-connector = { workspace = true }
mailparse = { workspace = true }
lettre = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { workspace = true }
# Pure-Rust PDF text extraction. Used eagerly when an attachment lands so
# the agent always has the cached text even after the bytes are TTL-purged.
pdf-extract = "0.12"

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
