[package]
name = "athen-voice"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true, features = ["process", "io-util", "macros", "rt"] }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lib]
