[package]
name = "athen-web"
version = "0.1.0"
edition = "2021"

[dependencies]
athen-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

scraper = "0.20"
html2md = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
