[package]
name = "mcp-filesystem"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
schemars = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rmcp = { workspace = true, features = [
    "server",
    "macros",
    "client",
    "transport-io",
    "schemars",
] }
tempfile = "3"
